Rewrite using gpt

--- a/email_jonreads.ipynb
+++ b/email_jonreads.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "id": "ccbf9b30-4329-4611-b62e-d9ed6aed3a84",
    "metadata": {},
    "outputs": [],
@@ -17,30 +17,54 @@
     "import datetime\n",
     "from lxml import etree as ET\n",
     "import pytz\n",
+    "import html\n",
     "\n",
     "from ChatPodcastGPT import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
+   "id": "8fbcdcb5-e390-4ed5-b310-8e2bdc8addcd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MAX_LENGTH = 50_000\n",
+    "TXT_MODEL = 'gpt-3.5-turbo-0125'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "1e3df7c2-b9df-486a-8df5-7e96d277bb06",
    "metadata": {},
    "outputs": [],
    "source": [
     "def clean_text(text):\n",
+    "    # HTML unescape\n",
+    "    text = html.unescape(text)\n",
+    "\n",
     "    # Replace non-breaking spaces and other similar whitespace characters\n",
     "    text = text.replace(u'\\xa0', ' ').replace(u'\\u200c', '')\n",
     "\n",
     "    # Optional: Remove other unwanted characters or sequences\n",
     "    text = re.sub(r'[^\\x00-\\x7F]+', ' ', text)  # Remove non-ASCII characters\n",
+    "\n",
+    "    # Correcting misplaced spaces before apostrophes\n",
+    "    text = re.sub(r\"\\s+'\", \"'\", text)\n",
+    "    \n",
+    "    # Correcting a space + s pattern that should be 's\n",
+    "    text = re.sub(r\"(\\w+)\\s+s\\b\", r\"\\1's\", text)\n",
+    "\n",
+    "    # Removing extra whitespace\n",
+    "    text = re.sub(r\"\\s+\", \" \", text).strip()\n",
     "    \n",
     "    return text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 30,
    "id": "6ee6cf04-9fbe-4fed-8904-72a746b0bac5",
    "metadata": {},
    "outputs": [],
@@ -67,14 +91,17 @@
     "        parts = msg.walk()\n",
     "        return list(parts)\n",
     "\n",
-    "    def get_html_text(self, msg_id):\n",
+    "    def get_html_text(self, msg_id, raw=False):\n",
     "        parts = self.get_msg_parts(msg_id)\n",
     "        text_content = []\n",
     "        for part in parts:\n",
     "            if part.get_content_type() != 'text/html':\n",
     "                continue\n",
-    "            soup = bs4.BeautifulSoup(part.get_payload(decode=True).decode(), 'html.parser')\n",
-    "            text_content.append(clean_text(soup.get_text()))\n",
+    "            if not raw:\n",
+    "                soup = bs4.BeautifulSoup(part.get_payload(decode=True).decode(), 'html.parser')\n",
+    "                text_content.append(clean_text(soup.get_text()))\n",
+    "            else:\n",
+    "                text_content.append(part.get_payload(decode=True).decode())\n",
     "        return '\\n'.join(text_content)\n",
     "\n",
     "    def get_email_metadata(self, msg_id):\n",
@@ -101,20 +128,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 31,
    "id": "4ebe0282-5504-41f7-9294-eb0bb3e5e333",
    "metadata": {},
    "outputs": [],
    "source": [
     "# mail = ZohoMail('jonreads@zoho.com', 'pxg8myj6GMX!zqn@pfd')\n",
     "# mail.list_ids()\n",
-    "# mail.get_email_metadata(b'10')\n",
-    "# sentances = mail.get_html_text(b'4').replace('. ', '\\n').split('\\n')"
+    "# # mail.get_email_metadata(b'')\n",
+    "# txt = mail.get_html_text(b'43')\n",
+    "# with open('/Users/jong/Documents/example_email.txt', 'w') as f:\n",
+    "#     f.write(txt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 42,
+   "id": "213e9d8e-176f-4548-9645-a8147c7ea81d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rewrite_email(txt):\n",
+    "    chat = Chat(\n",
+    "        '''Clean and slightly re-write text into something that has a strong voice.\n",
+    "Keep the information the same.\n",
+    "Keep the length the same.\n",
+    "Separate every few sentances with a single newline character.''',\n",
+    "    )\n",
+    "    return chat.message(txt, model='gpt-4-0125-preview')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "9e84dcb8-aca5-4fc7-9418-0069ad0c60a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# rewrite_email(txt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "id": "97abe050-5cd1-4a9c-835f-b72a3e1cc41b",
    "metadata": {},
    "outputs": [],
@@ -152,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 45,
    "id": "384a4607-0521-4882-8a21-8e11f201d1ac",
    "metadata": {},
    "outputs": [],
@@ -183,7 +239,10 @@
     "\n",
     "        # Make and publish episode\n",
     "        logger.info(f'Making {mail_meta=} {mid=} {now - mail_meta[\"date\"]}')\n",
-    "        ep_text = mail.get_html_text(mid).replace('. ', '\\n').split('\\n')\n",
+    "        ep_text = mail.get_html_text(mid)\n",
+    "        if len(ep_text) > MAX_LENGTH:\n",
+    "            continue\n",
+    "        ep_text = rewrite_email(ep_text).split('\\n')\n",
     "        ep_lines = [''.join(ep_text[i:i+3]) for i in range(0, len(ep_text), 3)]  # Turn into speakings\n",
     "\n",
     "        ep = Episode(\n",
@@ -198,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 47,
    "id": "074952b0-afd5-4436-a130-85155cea6ef0",
    "metadata": {},
    "outputs": [],
