stop it with chatgpt

--- a/email_jonreads.ipynb
+++ b/email_jonreads.ipynb
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 48,
    "id": "384a4607-0521-4882-8a21-8e11f201d1ac",
    "metadata": {},
    "outputs": [],
@@ -232,7 +232,7 @@
     "        if now - mail_meta['date'] > timediff:\n",
     "            continue\n",
     "\n",
-    "        title_long = f'[{mail_meta[\"sender\"].split(\" <\")[0]}] {re.sub(r\"[^a-zA-Z0-9]\", \"_\", mail_meta[\"subject\"])}'\n",
+    "        title_long = f'[{re.sub(r\"[^a-zA-Z0-9]\", \"_\", mail_meta[\"sender\"].split(\" <\")[0])}] {re.sub(r\"[^a-zA-Z0-9]\", \"_\", mail_meta[\"subject\"])}'\n",
     "        title = title_long[:200]\n",
     "        if pd.contains_episode(title):\n",
     "            continue\n",
@@ -242,7 +242,7 @@
     "        ep_text = mail.get_html_text(mid)\n",
     "        if len(ep_text) > MAX_LENGTH:\n",
     "            continue\n",
-    "        ep_text = rewrite_email(ep_text).split('\\n')\n",
+    "        ep_text = ep_text.replace('. ', '\\n').split('\\n')\n",
     "        ep_lines = [''.join(ep_text[i:i+3]) for i in range(0, len(ep_text), 3)]  # Turn into speakings\n",
     "\n",
     "        ep = Episode(\n",
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 50,
    "id": "074952b0-afd5-4436-a130-85155cea6ef0",
    "metadata": {},
    "outputs": [],
