style changes and min length

--- a/ChatPodcastGPT.ipynb
+++ b/ChatPodcastGPT.ipynb
@@ -522,8 +522,10 @@
     "            IPython.display.display(IPython.display.Audio(audio, autoplay=False))\n",
     "            return audio\n",
     "            \n",
-    "    def step(self, msg=None, skip_aud=False, ret_aud=True, **kwargs):\n",
+    "    def step(self, msg=None, skip_aud=False, ret_aud=True, min_length=None, **kwargs):\n",
     "        msg = self.message(msg, **kwargs)\n",
+    "        if min_length is not None and len(msg) < min_length:\n",
+    "            raise ValueError(f\"Message [{msg}] is shorter than {min_length=}\")\n",
     "        if skip_aud: return msg\n",
     "        aud = self.text2speech(msg)\n",
     "        if ret_aud: return msg, aud\n",
