--- a/ChatPodcastGPT.ipynb
+++ b/ChatPodcastGPT.ipynb
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "765f4de8-d197-434d-9364-e0044ffdf7b6",
    "metadata": {},
    "outputs": [],
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "46f8d0ca-2a36-4b5a-b39c-d19e0f94d63b",
    "metadata": {},
    "outputs": [],
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "2aaeccd5-5c89-44ec-9d65-4afe4b95b6a9",
    "metadata": {},
    "outputs": [],
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "e1682e3e-2215-49aa-9160-7d5809e423e2",
    "metadata": {},
    "outputs": [],
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "a2ea46ab-a973-4ad2-852b-2613274dd9e7",
    "metadata": {
     "tags": []
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "14a0eef7-3b50-4ca7-9210-2042d7adbe00",
    "metadata": {
     "tags": []
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "c88be541-f005-412f-abc0-7cfa159e7a93",
    "metadata": {},
    "outputs": [],
@@ -563,10 +563,11 @@
     "\n",
     "    def remove_episodes_older_than(self, limit):\n",
     "        now = datetime.datetime.now()\n",
+    "        parent_map = {c:p for p in self.root.iter() for c in p}\n",
     "        for episode in self.root.findall('./channel/item'):\n",
     "            pub_date = datetime.datetime.strptime(episode.find('pubDate').text, '%a, %d %b %Y %H:%M:%S %Z')  # RSS date format\n",
     "            if now - pub_date > limit:\n",
-    "                episode.getparent().remove(episode)\n",
+    "                parent_map[episode].remove(episode)\n",
     "\n",
     "    def add_episode(self, episode_details):\n",
     "        episode = ET.SubElement(self.root, './channel/item')\n",
@@ -584,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 39,
    "id": "6cb12748-5a8a-4b27-b688-2e7bc583be17",
    "metadata": {
     "tags": []
@@ -646,19 +647,23 @@
     "    def remove_episodes_older_than(self, xml_data, limit):\n",
     "        now = dt.datetime.now()\n",
     "        root = ET.fromstring(xml_data)\n",
+    "        parent_map = {c:p for p in root.iter() for c in p}\n",
+    "        token = os.environ.get(\"GH_KEY\", None) or open(\"/Users/jong/.gh_token\").read().strip()\n",
+    "        gh = Github(token)\n",
     "        for episode in root.findall('./channel/item'):\n",
     "            pub_date = dt.datetime.strptime(episode.find('pubDate').text, '%a, %d %b %Y %H:%M:%S %Z')  # RSS date format\n",
     "            if now - pub_date > limit:\n",
     "                episode_path = episode.find('enclosure').attrib['url'].split('.github.io/', 1)[1]\n",
     "                logger.info(f\"Deleting old episode: {episode_path}\")\n",
-    "                episode.getparent().remove(episode)\n",
+    "                parent_map[episode].remove(episode)\n",
     "                # Get the repository\n",
     "                try:\n",
     "                    repo = gh.get_user().get_repo(self.repo)\n",
     "                except:\n",
     "                    repo = gh.get_organization(self.org).get_repo(self.repo)\n",
     "                try:\n",
-    "                    repo.delete_file(episode_path, \"remove test\", contents.sha, branch=\"test\")\n",
+    "                    contents = repo.get_contents(episode_path)\n",
+    "                    repo.delete_file(episode_path, \"remove due to date\", contents.sha)\n",
     "                except Exception as e:\n",
     "                    logger.exception(e)\n",
     "        # Convert back to string and pretty-format\n",
@@ -713,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 40,
    "id": "6fea16c5-3d56-4277-a6eb-d74667b64435",
    "metadata": {
     "tags": []
@@ -789,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 41,
    "id": "75d0a7d1-de77-4129-a15c-537c7919b678",
    "metadata": {},
    "outputs": [],
@@ -817,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 42,
    "id": "1132bda8-7767-4f78-9789-046c4af27a72",
    "metadata": {
     "scrolled": true,
@@ -844,6 +849,16 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81cc31ec-2916-4ac2-9d5a-b8220387b010",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    "
+   ]
   }
  ],
  "metadata": {
