switch to Claude Sonnet

--- a/ChatPodcastGPT.ipynb
+++ b/ChatPodcastGPT.ipynb
@@ -215,6 +215,22 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "e889db06-483c-4807-915c-c51d4def2b30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import boto3\n",
+    "\n",
+    "# bedrock = boto3.client(service_name=\"bedrock\", region_name=\"us-east-1\")\n",
+    "# response = bedrock.list_foundation_models(byProvider=\"anthropic\")\n",
+    "\n",
+    "# for summary in response[\"modelSummaries\"]:\n",
+    "#     print(summary[\"modelId\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "46f8d0ca-2a36-4b5a-b39c-d19e0f94d63b",
    "metadata": {},
    "outputs": [],
@@ -223,10 +239,39 @@
     "    MODELS = {\n",
     "        \"claude-instant\": \"anthropic.claude-instant-v1\",\n",
     "        \"claude-best\": \"anthropic.claude-v2:1\",\n",
+    "        \"claude-3-sonnet\": \"anthropic.claude-3-sonnet-20240229-v1:0\",\n",
     "    }\n",
     "\n",
+    "    \n",
     "    @classmethod\n",
-    "    def msg(cls, messages=None, model=\"anthropic.claude-instant-v1\", **kwargs):\n",
+    "    def consolidate_messages(cls, message_list):\n",
+    "        if not message_list:\n",
+    "            return []\n",
+    "        consolidated = []\n",
+    "        current_role = None\n",
+    "        current_content = \"\"\n",
+    "\n",
+    "        for message in message_list:\n",
+    "            role = message.get(\"role\")\n",
+    "            content = message.get(\"content\", \"\")\n",
+    "    \n",
+    "            if role == \"system\":\n",
+    "                role = \"user\"\n",
+    "            if role == current_role:\n",
+    "                current_content += \"\\n\" + content\n",
+    "            else:\n",
+    "                if current_role is not None:\n",
+    "                    consolidated.append({\"role\": current_role, \"content\": current_content})\n",
+    "                current_content = content\n",
+    "                current_role = role\n",
+    "    \n",
+    "        if current_role is not None:\n",
+    "            consolidated.append({\"role\": current_role, \"content\": current_content})\n",
+    "    \n",
+    "        return consolidated\n",
+    "\n",
+    "    @classmethod\n",
+    "    def msg(cls, messages=None, model=\"anthropic.claude-3-sonnet-20240229-v1:0\", **kwargs):\n",
     "        client = boto3.client(service_name=\"bedrock-runtime\", region_name=\"us-east-1\")\n",
     "        try:\n",
     "            # The different model providers have individual request and response formats.\n",
@@ -235,23 +280,28 @@
     "\n",
     "            # Claude requires you to enclose the prompt as follows:\n",
     "            # enclosed_prompt = \"Human: \" + prompt + \"\\n\\nAssistant:\"\n",
-    "            prompt = \"\\n\\n\".join(\n",
-    "                [f'{\"\" if (msg[\"role\"] == \"system\" and model == cls.MODELS[\"claude-best\"]) else (\"Human\" if msg[\"role\"] != \"assistant\" else \"Assistant\")}: {msg[\"content\"]}' for msg in messages] +\n",
-    "                [\"Assistant:\"]\n",
-    "            )\n",
+    "            # prompt = \"\\n\\n\".join(\n",
+    "            #     [f'{\"\" if (msg[\"role\"] == \"system\" and model != cls.MODELS[\"claude-instant\"]) else (\"Human\" if msg[\"role\"] != \"assistant\" else \"Assistant\")}: {msg[\"content\"]}' for msg in messages] +\n",
+    "            #     [\"Assistant:\"]\n",
+    "            # )\n",
     "\n",
     "            if 'temperature' not in kwargs:\n",
     "                kwargs['temperature'] = 1\n",
+    "            system = \"\\n\".join([m['content'] for m in messages if m['role'] == 'system'])\n",
+    "            other_msgs = cls.consolidate_messages([m for m in messages if m['role'] != 'system'])\n",
+    "            \n",
     "            body = {\n",
-    "                \"prompt\": prompt,\n",
-    "                \"max_tokens_to_sample\": 2048,\n",
+    "                \"system\": system,\n",
+    "                \"messages\": other_msgs,\n",
+    "                \"max_tokens\": 2048,\n",
+    "                \"anthropic_version\": \"bedrock-2023-05-31\",\n",
     "                **kwargs\n",
     "            }\n",
     "            response = client.invoke_model(\n",
     "                modelId=model, body=json.dumps(body)\n",
     "            )\n",
     "            response_body = json.loads(response[\"body\"].read())\n",
-    "            completion = response_body[\"completion\"]\n",
+    "            completion = response_body[\"content\"][0][\"text\"]\n",
     "            return completion\n",
     "        except ClientError as e:\n",
     "            logger.exception(f\"Couldn't invoke {model}\", e)\n",
@@ -260,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "2aaeccd5-5c89-44ec-9d65-4afe4b95b6a9",
    "metadata": {},
    "outputs": [],
@@ -311,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "e1682e3e-2215-49aa-9160-7d5809e423e2",
    "metadata": {},
    "outputs": [],
@@ -363,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "a2ea46ab-a973-4ad2-852b-2613274dd9e7",
    "metadata": {
     "tags": []
@@ -453,20 +503,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "14a0eef7-3b50-4ca7-9210-2042d7adbe00",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found credentials in shared credentials file: ~/.aws/credentials\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class PodcastChat(Chat):\n",
     "    def __init__(self, topic, podcast=\"award winning\", max_length=DEFAULT_LENGTH, hosts=['Tom', 'Jen'], host_voices=[AWSPollyTTS(AWSPollyTTS.MAN), OpenAITTS(OpenAITTS.WOMAN)], extra_system=None):\n",
@@ -534,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "id": "c88be541-f005-412f-abc0-7cfa159e7a93",
    "metadata": {},
    "outputs": [],
@@ -585,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "id": "6cb12748-5a8a-4b27-b688-2e7bc583be17",
    "metadata": {
     "tags": []
@@ -718,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "id": "6fea16c5-3d56-4277-a6eb-d74667b64435",
    "metadata": {
     "tags": []
@@ -794,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "id": "75d0a7d1-de77-4129-a15c-537c7919b678",
    "metadata": {},
    "outputs": [],
@@ -854,11 +896,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "81cc31ec-2916-4ac2-9d5a-b8220387b010",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
-   "source": [
-    "    "
-   ]
+   "source": []
   }
  ],
  "metadata": {
