use metaprompt to better the prompt in arxiv podcast

--- a/ChatPodcastGPT.ipynb
+++ b/ChatPodcastGPT.ipynb
@@ -511,8 +511,9 @@
    "outputs": [],
    "source": [
     "class PodcastChat(Chat):\n",
-    "    def __init__(self, topic, podcast=\"award winning\", max_length=DEFAULT_LENGTH, hosts=['Tom', 'Jen'], host_voices=[AWSPollyTTS(AWSPollyTTS.MAN), OpenAITTS(OpenAITTS.WOMAN)], extra_system=None):\n",
-    "        system = f\"\"\"You are an {podcast} podcast with hosts {hosts[0]} and {hosts[1]}.\n",
+    "    def __init__(self, topic, podcast=\"award winning\", max_length=DEFAULT_LENGTH, hosts=['Tom', 'Jen'], host_voices=[AWSPollyTTS(AWSPollyTTS.MAN), OpenAITTS(OpenAITTS.WOMAN)], extra_system=None, system=None):\n",
+    "        if system is None:\n",
+    "            system = f\"\"\"You are an {podcast} podcast with hosts {hosts[0]} and {hosts[1]}.\n",
     "Respond with the hosts names before each line like {hosts[0]}: and {hosts[1]}:\"\"\".replace(\"\\n\", \" \")\n",
     "        if extra_system is not None:\n",
     "            system = '\\n'.join([system, extra_system])\n",
