--- a/ChatPodcastGPT.ipynb
+++ b/ChatPodcastGPT.ipynb
@@ -41,6 +41,7 @@
     "import vertexai.preview.generative_models\n",
     "from mistralai.client import MistralClient\n",
     "from mistralai.models.chat_completion import ChatMessage as MistralChatMessage\n",
+    "import anthropic\n",
     "logger = jonlog.getLogger()\n",
     "openai.api_key = os.environ.get(\"OPENAI_KEY\", None) or open('/Users/jong/.openai_key').read().strip()"
    ]
@@ -199,38 +200,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
+   "id": "f79ca350-7d36-4e7b-8b97-9054321db3d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.cloud import texttospeech_v1 as texttospeech\n",
+    "\n",
+    "class GoogleTTS:\n",
+    "    WOMAN = 'en-US-Wavenet-F'\n",
+    "    MAN = 'en-US-Wavenet-D'\n",
+    "    BRIT_WOMAN = 'en-GB-Wavenet-A'\n",
+    "\n",
+    "    def __init__(self, voice_name=None):\n",
+    "        self.client = texttospeech.TextToSpeechClient()\n",
+    "        self._voice_name = voice_name or self.WOMAN\n",
+    "\n",
+    "    # Assuming the RateLimited and retry_with_logging decorators are defined elsewhere\n",
+    "    @RateLimited(95)\n",
+    "    @jonlog.retry_with_logging()\n",
+    "    def tts(self, text):\n",
+    "        synthesis_input = texttospeech.SynthesisInput(text=text)\n",
+    "        voice_params = texttospeech.VoiceSelectionParams(\n",
+    "            language_code=self._voice_name[:5],  # Extracts the language code from the voice name\n",
+    "            name=self._voice_name,\n",
+    "            # ssml_gender=texttospeech.SsmlVoiceGender.NEUTRAL\n",
+    "        )\n",
+    "        audio_config = texttospeech.AudioConfig(\n",
+    "            audio_encoding=texttospeech.AudioEncoding.MP3\n",
+    "        )\n",
+    "        response = self.client.synthesize_speech(\n",
+    "            input=synthesis_input,\n",
+    "            voice=voice_params,\n",
+    "            audio_config=audio_config\n",
+    "        )\n",
+    "        return response.audio_content\n",
+    "\n",
+    "    @classmethod\n",
+    "    def list_voices(cls):\n",
+    "        data = texttospeech.TextToSpeechClient().list_voices()\n",
+    "        voices = [\n",
+    "            v.name for v in data.voices\n",
+    "            if v.name[:2] == 'en'\n",
+    "            and 'studio' not in v.name.lower()\n",
+    "            and 'journey' not in v.name.lower()\n",
+    "        ]\n",
+    "        return voices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "id": "765f4de8-d197-434d-9364-e0044ffdf7b6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_random_voices(n=2):\n",
-    "    return random.sample([\n",
-    "        OpenAITTS(voice_id=vid) for vid in ['alloy', 'echo', 'fable', 'onyx', 'nova', 'shimmer']\n",
-    "    ] + [\n",
-    "        AWSPollyTTS(voice_id=vid) for vid in ['Kimberly', 'Matthew', 'Amy']\n",
-    "    ], n)"
+    "def get_random_voices(n=2, openai=True, aws=True, google=True):\n",
+    "    possible = []\n",
+    "    if openai:\n",
+    "        possible += [OpenAITTS(voice_id=vid) for vid in ['alloy', 'echo', 'fable', 'onyx', 'nova', 'shimmer']]\n",
+    "    if aws:\n",
+    "        possible += [AWSPollyTTS(voice_id=vid) for vid in ['Kimberly', 'Matthew', 'Amy']]\n",
+    "    if google:\n",
+    "        possible += [GoogleTTS(vid) for vid in GoogleTTS.list_voices()]\n",
+    "    return random.sample(possible, n)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "e889db06-483c-4807-915c-c51d4def2b30",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import boto3\n",
-    "\n",
-    "# bedrock = boto3.client(service_name=\"bedrock\", region_name=\"us-east-1\")\n",
-    "# response = bedrock.list_foundation_models(byProvider=\"anthropic\")\n",
-    "\n",
-    "# for summary in response[\"modelSummaries\"]:\n",
-    "#     print(summary[\"modelId\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "46f8d0ca-2a36-4b5a-b39c-d19e0f94d63b",
    "metadata": {},
    "outputs": [],
@@ -310,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "2aaeccd5-5c89-44ec-9d65-4afe4b95b6a9",
    "metadata": {},
    "outputs": [],
@@ -361,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "e1682e3e-2215-49aa-9160-7d5809e423e2",
    "metadata": {},
    "outputs": [],
@@ -413,7 +451,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
+   "id": "35981b10-46ec-4d33-8bac-e9959d0c6989",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class AnthropicChat:\n",
+    "    MODELS = {\n",
+    "        \"claude-opus\": \"claude-3-opus-20240229\",   # Large\n",
+    "        \"claude-sonnet\": \"claude-3-sonnet-20240229\", # Medium\n",
+    "        \"claude-haiku\": \"claude-3-haiku-20240307\",  # Small\n",
+    "    }\n",
+    "    api_key = os.environ.get(\"ANTHROPIC_APIKEY\") or open('/Users/jong/.anthropic_apikey').read().strip()\n",
+    "\n",
+    "    @classmethod\n",
+    "    def msg(cls, messages=None, model=\"claude-3-haiku-20240307\", **kwargs):\n",
+    "        messages = MistralChat.consolidate_messages(messages)\n",
+    "        system = '\\n'.join([msg['content'] for msg in messages if msg['role'] == 'system'])\n",
+    "        messages = [m for m in messages if m['role'] != 'system' and m['content']]\n",
+    "        if not messages:\n",
+    "            messages.append({'role': 'user', 'content': 'Continue.'})\n",
+    "        client = anthropic.Anthropic(api_key=cls.api_key)\n",
+    "        if 'max_tokens' not in kwargs:\n",
+    "            kwargs['max_tokens'] = 4096\n",
+    "        message = client.messages.create(\n",
+    "            model=model,\n",
+    "            # max_tokens=4096,\n",
+    "            messages=messages,\n",
+    "            system=system,\n",
+    "            # temperature=0\n",
+    "            **kwargs,\n",
+    "        ).content[0].text\n",
+    "        return message"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "3bf76fbe-26ac-4b3b-b379-96e8634a60c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# AnthropicChat.msg([{'role': 'user', 'content': 'Give me a list of insane commercial genres'}])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "id": "a2ea46ab-a973-4ad2-852b-2613274dd9e7",
    "metadata": {
     "tags": []
@@ -478,6 +562,9 @@
     "        elif model.startswith(\"MISTRAL/\"):\n",
     "            model = model[8:]\n",
     "            resp = MistralChat.msg(messages=self._history, model=model, **kwargs)\n",
+    "        elif model.startswith(\"ANTHROPIC/\"):\n",
+    "            model = model[10:]\n",
+    "            resp = AnthropicChat.msg(messages=self._history, model=model, **kwargs)\n",
     "        else:\n",
     "            resp = openai.OpenAI(api_key=openai.api_key).chat.completions.create(\n",
     "                *args,\n",
@@ -503,12 +590,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "id": "14a0eef7-3b50-4ca7-9210-2042d7adbe00",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found credentials in shared credentials file: ~/.aws/credentials\n"
+     ]
+    }
+   ],
    "source": [
     "class PodcastChat(Chat):\n",
     "    def __init__(self, topic, podcast=\"award winning\", max_length=DEFAULT_LENGTH, hosts=['Tom', 'Jen'], host_voices=[AWSPollyTTS(AWSPollyTTS.MAN), OpenAITTS(OpenAITTS.WOMAN)], extra_system=None, system=None):\n",
