--- a/ChatPodcastGPT.ipynb
+++ b/ChatPodcastGPT.ipynb
@@ -43,7 +43,8 @@
     "from mistralai.models.chat_completion import ChatMessage as MistralChatMessage\n",
     "import anthropic\n",
     "logger = jonlog.getLogger()\n",
-    "openai.api_key = os.environ.get(\"OPENAI_KEY\", None) or open('/Users/jong/.openai_key').read().strip()"
+    "openai.api_key = os.environ.get(\"OPENAI_KEY\", None) or open('/Users/jong/.openai_key').read().strip()\n",
+    "os.environ['GOOGLE_CLOUD_PROJECT'] = 'summer2023-392312'"
    ]
   },
   {
