--- a/email_jonreads.ipynb
+++ b/email_jonreads.ipynb
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "MAX_LENGTH = 50_000\n",
-    "TXT_MODEL = 'gpt-3.5-turbo-0125'"
+    "TXT_MODEL = 'ANTHROPIC/claude-haiku'"
    ]
   },
   {
