--- a/ChatPodcastGPT.ipynb
+++ b/ChatPodcastGPT.ipynb
@@ -279,6 +279,7 @@
     "        \"claude-instant\": \"anthropic.claude-instant-v1\",\n",
     "        \"claude-best\": \"anthropic.claude-v2:1\",\n",
     "        \"claude-3-sonnet\": \"anthropic.claude-3-sonnet-20240229-v1:0\",\n",
+    "        \"claude-3-haiku\": \"anthropic.claude-3-haiku-20240307-v1:0\",\n",
     "    }\n",
     "\n",
     "    \n",
@@ -789,12 +790,14 @@
     "        parent_map = {c:p for p in root.iter() for c in p}\n",
     "        token = os.environ.get(\"GH_KEY\", None) or open(\"/Users/jong/.gh_token\").read().strip()\n",
     "        gh = Github(token)\n",
+    "        made_changes = False\n",
     "        for episode in root.findall('./channel/item'):\n",
     "            pub_date = dt.datetime.strptime(episode.find('pubDate').text, '%a, %d %b %Y %H:%M:%S %Z')  # RSS date format\n",
     "            if now - pub_date > limit:\n",
     "                episode_path = episode.find('enclosure').attrib['url'].split('.github.io/', 1)[1]\n",
     "                logger.info(f\"Deleting old episode: {episode_path}\")\n",
     "                parent_map[episode].remove(episode)\n",
+    "                made_changes = True\n",
     "                # Get the repository\n",
     "                try:\n",
     "                    repo = gh.get_user().get_repo(self.repo)\n",
@@ -809,6 +812,13 @@
     "        pretty_xml = minidom.parseString(ET.tostring(root)).toprettyxml(indent='  ')\n",
     "        # Remove extra newlines\n",
     "        pretty_xml = os.linesep.join([s for s in pretty_xml.splitlines() if s.strip()])\n",
+    "        # Upload\n",
+    "        if made_changes:\n",
+    "            try:\n",
+    "                podcast_xml_sha = repo.get_contents(self.xml_path).sha\n",
+    "                self.upload_to_github(self.xml_path, pretty_xml, f'Delete old episodes in podcast.xml', podcast_xml_sha)\n",
+    "            except Exception as e:\n",
+    "                logger.exception(e)\n",
     "        return pretty_xml\n",
     "    \n",
     "    def upload_episode(self, file_path, file_name, episode_title, episode_description):\n",
