fix arxiv and others

--- a/email_jonreads.ipynb
+++ b/email_jonreads.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "ccbf9b30-4329-4611-b62e-d9ed6aed3a84",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found credentials in shared credentials file: ~/.aws/credentials\n"
+     ]
+    }
+   ],
    "source": [
     "import imaplib\n",
     "import email\n",
@@ -24,18 +32,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "id": "8fbcdcb5-e390-4ed5-b310-8e2bdc8addcd",
    "metadata": {},
    "outputs": [],
    "source": [
     "MAX_LENGTH = 50_000\n",
-    "TXT_MODEL = 'ANTHROPIC/claude-haiku'"
+    "TXT_MODEL = 'AWS/claude-3-haiku'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "id": "1e3df7c2-b9df-486a-8df5-7e96d277bb06",
    "metadata": {},
    "outputs": [],
@@ -64,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "id": "6ee6cf04-9fbe-4fed-8904-72a746b0bac5",
    "metadata": {},
    "outputs": [],
@@ -128,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 52,
    "id": "4ebe0282-5504-41f7-9294-eb0bb3e5e333",
    "metadata": {},
    "outputs": [],
@@ -136,31 +144,36 @@
     "# mail = ZohoMail('jonreads@zoho.com', 'pxg8myj6GMX!zqn@pfd')\n",
     "# mail.list_ids()\n",
     "# # mail.get_email_metadata(b'')\n",
-    "# txt = mail.get_html_text(b'43')\n",
-    "# with open('/Users/jong/Documents/example_email.txt', 'w') as f:\n",
-    "#     f.write(txt)"
+    "# txt = mail.get_html_text(b'92', raw=True)\n",
+    "# len(txt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 49,
    "id": "213e9d8e-176f-4548-9645-a8147c7ea81d",
    "metadata": {},
    "outputs": [],
    "source": [
     "def rewrite_email(txt):\n",
     "    chat = Chat(\n",
-    "        '''Clean and slightly re-write text into something that has a strong voice.\n",
-    "Keep the information the same.\n",
-    "Keep the length the same.\n",
-    "Separate every few sentances with a single newline character.''',\n",
+    "        '''Your task is to convert the following newsletter into SSML format for Google's TTS. Follow these steps:\n",
+    "\n",
+    "1. Remove any ads, \"upgrade to paid\" links, or other promotional content not core to the newsletter itself. Do not remove or alter any other content.\n",
+    "\n",
+    "2. Convert the entire HTML newsletter into multiple valid SSML markup pieces. Do not change or paraphrase the actual text content of the newsletter. Use fancy SSML features.\n",
+    "\n",
+    "3. Break the SSML output into short pieces of 1-5 sentences each. Wrap each piece with <speak> and </speak>. Make each piece self-contained and valid SSML.\n",
+    "\n",
+    "4. Only use the following SSML tags: <speak> <break> <say‑as> <s> <sub> <mark> <prosody> <emphasis> <phoneme> <voice> <lang>.''',\n",
+    "        max_length=MAX_LENGTH,\n",
     "    )\n",
-    "    return chat.message(txt, model='gpt-4-0125-preview')"
+    "    return chat.message(txt, model=TXT_MODEL)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 51,
    "id": "9e84dcb8-aca5-4fc7-9418-0069ad0c60a9",
    "metadata": {},
    "outputs": [],
