--- a/ChatPodcastGPT.ipynb
+++ b/ChatPodcastGPT.ipynb
@@ -607,7 +607,7 @@
     "\n",
     "    @classmethod\n",
     "    def get_apikey(cls):\n",
-    "        return api_key=os.environ.get(\"TOGETHER_API_KEY\") or open(os.path.expanduser(\"~/.together_apikey\")).read().strip()\n",
+    "        return os.environ.get(\"TOGETHER_API_KEY\") or open(os.path.expanduser(\"~/.together_apikey\")).read().strip()\n",
     "\n",
     "    @classmethod\n",
     "    def msg(cls, messages=None, model=None, **kwargs):\n",
