--- a/ChatPodcastGPT.ipynb
+++ b/ChatPodcastGPT.ipynb
@@ -50,7 +50,7 @@
     "        from tqdm.notebook import tqdm\n",
     "    else:\n",
     "        from tqdm import tqdm\n",
-    "except ImportError:\n",
+    "except:\n",
     "    from tqdm import tqdm\n",
     "\n",
     "logger = jonlog.getLogger()\n",
