add lions email action

--- a/ChatPodcastGPT.ipynb
+++ b/ChatPodcastGPT.ipynb
@@ -389,7 +389,7 @@
     "        return os.environ.get(\"GEMINI_API_KEY\") or open(os.path.expanduser(\"~/.google_apikey\")).read().strip()\n",
     "\n",
     "    @classmethod\n",
-    "    def consolidate_messages(cls, message_list):\n",
+    "    def consolidate_messages(cls, message_list, keep_system=False):\n",
     "        if not message_list:\n",
     "            return []\n",
     "        consolidated = []\n",
@@ -400,7 +400,7 @@
     "            role = message.get(\"role\")\n",
     "            content = message.get(\"content\", \"\")\n",
     "    \n",
-    "            if role == \"system\":\n",
+    "            if role == \"system\" and not keep_system:\n",
     "                role = \"user\"\n",
     "            if role == current_role:\n",
     "                current_content += \"\\n\" + content\n",
@@ -434,19 +434,23 @@
     "            {\"category\": \"HARM_CATEGORY_SEXUALLY_EXPLICIT\", \"threshold\": \"BLOCK_NONE\"},\n",
     "            {\"category\": \"HARM_CATEGORY_DANGEROUS_CONTENT\", \"threshold\": \"BLOCK_NONE\"},\n",
     "        ]\n",
+    "\n",
+    "        # Consolidate messages\n",
+    "        consolidated_messages = cls.consolidate_messages(messages, keep_system=True)\n",
+    "        final_msg, system_msg = \"Continue\", None\n",
+    "        if consolidated_messages[-1]['role'] == 'user':\n",
+    "            final_msg = consolidated_messages.pop(-1)['content']\n",
+    "        if consolidated_messages[0]['role'] == 'system':\n",
+    "            system_msg = consolidated_messages.pop(0)['content']\n",
     "        \n",
     "        # Initialize the model\n",
     "        model = google.generativeai.GenerativeModel(\n",
     "            model_name=model_name,\n",
     "            safety_settings=safety_settings,\n",
     "            generation_config=generation_config,\n",
+    "            system_instruction=system_msg,\n",
     "        )\n",
-    "        \n",
-    "        # Consolidate messages\n",
-    "        consolidated_messages = cls.consolidate_messages(messages)\n",
-    "        final_msg = \"Continue\"\n",
-    "        if consolidated_messages[-1]['role'] == 'user':\n",
-    "            final_msg = consolidated_messages.pop(-1)['content']\n",
+    "\n",
     "        # Create chat session history\n",
     "        history = []\n",
     "        for msg in consolidated_messages:\n",
@@ -769,7 +773,7 @@
     "        self._hosts = hosts\n",
     "        self._history.append({\n",
     "            \"role\": \"user\", \"content\": f\"\"\"Generate an informative, entertaining, and very detailed podcast episode about {topic}.\n",
-    "Make sure to teach complex topics in an intuitive way.\"\"\".replace(\"\\n\", \" \")\n",
+    "Respond with the hosts names before each line like\\n\\n{hosts[0]}: ...\\nand\\n{hosts[1]}:...\\n\"\"\"\n",
     "        })\n",
     "        self._tts_h1, self._tts_h2 = host_voices\n",
     "\n",
