--- a/Lions.ipynb
+++ b/Lions.ipynb
@@ -37,7 +37,6 @@
     "import random\n",
     "import os\n",
     "import google.generativeai as genai\n",
-    "import PIL.Image\n",
     "import tempfile\n",
     "\n",
     "import jonlog\n",
@@ -242,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 199,
    "id": "2ec58c75-7429-4790-96a6-498fb4a72d19",
    "metadata": {},
    "outputs": [
@@ -270,7 +269,16 @@
       "Uploaded file '1.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/s2f5f3jjh9ff\n",
       "\u001b[2m2024-05-20T22:50:28.162186Z\u001b[0m [\u001b[32m\u001b[1minfo     \u001b[0m] \u001b[1mAt the start of your message, tag the photo with just one of these tags, surrounded by square brackets. [Boring, Animal, Worker, Non-Worker Person, Unknown]. Always respond truthfully. However, respond in the style of elated Larry David rant\u001b[0m [\u001b[34m\u001b[1m__main__\u001b[0m] \u001b[36mcalling_func\u001b[0m=\u001b[35mmessage\u001b[0m \u001b[36mthread_id\u001b[0m=\u001b[35m[Main]\u001b[0m\n",
       "Uploaded file '0.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/nho91ttcwycv\n",
-      "Uploaded file '1.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/kkglbk5w92h8\n"
+      "Uploaded file '1.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/kkglbk5w92h8\n",
+      "\u001b[2m2024-05-20T22:50:43.751878Z\u001b[0m [\u001b[32m\u001b[1minfo     \u001b[0m] \u001b[1mAt the start of your message, tag the photo with just one of these tags, surrounded by square brackets. [Boring, Animal, Worker, Non-Worker Person, Unknown]. Always respond truthfully. However, respond in the style of enthralled Elon Musk Tweet\u001b[0m [\u001b[34m\u001b[1m__main__\u001b[0m] \u001b[36mcalling_func\u001b[0m=\u001b[35mmessage\u001b[0m \u001b[36mthread_id\u001b[0m=\u001b[35m[Main]\u001b[0m\n",
+      "Uploaded file '0.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/fbgyaq2zbbxf\n",
+      "Uploaded file '1.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/iwr6xouqzke3\n",
+      "\u001b[2m2024-05-20T22:50:58.709999Z\u001b[0m [\u001b[32m\u001b[1minfo     \u001b[0m] \u001b[1mAt the start of your message, tag the photo with just one of these tags, surrounded by square brackets. [Boring, Animal, Worker, Non-Worker Person, Unknown]. Always respond truthfully. However, respond in the style of despondent Donald Trump campaign rant\u001b[0m [\u001b[34m\u001b[1m__main__\u001b[0m] \u001b[36mcalling_func\u001b[0m=\u001b[35mmessage\u001b[0m \u001b[36mthread_id\u001b[0m=\u001b[35m[Main]\u001b[0m\n",
+      "Uploaded file '0.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/pdx3lctcpv13\n",
+      "Uploaded file '1.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/2pq6wufd0ymm\n",
+      "\u001b[2m2024-05-20T22:51:17.446681Z\u001b[0m [\u001b[32m\u001b[1minfo     \u001b[0m] \u001b[1mAt the start of your message, tag the photo with just one of these tags, surrounded by square brackets. [Boring, Animal, Worker, Non-Worker Person, Unknown]. Always respond truthfully. However, respond in the style of sarcastic Larry David rant\u001b[0m [\u001b[34m\u001b[1m__main__\u001b[0m] \u001b[36mcalling_func\u001b[0m=\u001b[35mmessage\u001b[0m \u001b[36mthread_id\u001b[0m=\u001b[35m[Main]\u001b[0m\n",
+      "Uploaded file '0.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/9orretnjzhln\n",
+      "Uploaded file '1.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/8z9a7vomo8sk\n"
      ]
     }
    ],
