--- a/Lions.ipynb
+++ b/Lions.ipynb
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 200,
    "id": "16e15e2c-66ff-4f15-985b-99fbc0f2d749",
    "metadata": {},
    "outputs": [],
@@ -234,7 +234,7 @@
     "        mail.mark_read(email_data['id'])\n",
     "        return\n",
     "    chat = GoogleAI()\n",
-    "    persona, resp = chat.message(emails[-3]['attachments'])\n",
+    "    persona, resp = chat.message(email_data)\n",
     "    mail.forward_email(email_data['id'], f\"{resp}\\n\\nFrom: {persona} (gemini-1.5-flash)\")\n",
     "    mail.mark_read(email_data['id'])"
    ]
